--- a/src/sil/org/syllableparser/view/fxml/CVSyllablePatterns.fxml
+++ b/src/sil/org/syllableparser/view/fxml/CVSyllablePatterns.fxml
@@ -55,8 +55,8 @@
                         <Label text="%label.description" GridPane.rowIndex="1" />
                         <Label text="%label.naturalclasses" GridPane.rowIndex="2" />
 <!--                         <Label text="Label" GridPane.rowIndex="3" /> -->
-                        <TextField fx:id="nameField" GridPane.columnIndex="1" onMouseReleased="#toolBarMouseReleased" />
-                        <TextField fx:id="descriptionField" GridPane.columnIndex="1" GridPane.rowIndex="1" onMouseReleased="#toolBarMouseReleased" />
+                        <TextField fx:id="nameField" GridPane.columnIndex="1" onMouseReleased="#toolBarMouseReleased" onKeyReleased="#keyboardReleased" />
+                        <TextField fx:id="descriptionField" GridPane.columnIndex="1" GridPane.rowIndex="1" onMouseReleased="#toolBarMouseReleased" onKeyReleased="#keyboardReleased" />
 <!--                         <TextField fx:id="segmentOrNaturalClassField" GridPane.columnIndex="1" GridPane.rowIndex="2" /> -->
                         <FlowPane hgap="4.0" prefHeight="200.0" prefWidth="200.0" vgap="8.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <children>
