--- a/src/sil/org/syllableparser/view/fxml/RestoreBackupChooser.fxml
+++ b/src/sil/org/syllableparser/view/fxml/RestoreBackupChooser.fxml
@@ -24,7 +24,7 @@
         </columns>
       </TableView>
       <Label layoutX="14.0" layoutY="21.0" text="%label.backupdirectory" />
-      <TextField fx:id="directoryField" layoutX="12.0" layoutY="42.0" prefHeight="25.0" prefWidth="599.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="121.0" onMouseReleased="#toolBarMouseReleased" />
+      <TextField fx:id="directoryField" layoutX="12.0" layoutY="42.0" prefHeight="25.0" prefWidth="599.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="121.0" onMouseReleased="#toolBarMouseReleased" onKeyReleased="#keyboardReleased" />
       <Button layoutX="627.0" layoutY="42.0" mnemonicParsing="false" onAction="#handleBrowse" text="%label.browse" AnchorPane.rightAnchor="13.0" />
    </children>
 </AnchorPane>
