--- a/src/sil/org/syllableparser/view/fxml/CVSyllablePatterns.fxml
+++ b/src/sil/org/syllableparser/view/fxml/CVSyllablePatterns.fxml
@@ -54,7 +54,7 @@
                         <Label text="%label.name" />
                         <Label text="%label.description" GridPane.rowIndex="1" />
                         <Label text="%label.naturalclasses" GridPane.rowIndex="2" />
-<!--                         <Label text="Label" GridPane.rowIndex="3" /> -->
+                        <Label text="%label.active" GridPane.rowIndex="3" />
                         <TextField fx:id="nameField" GridPane.columnIndex="1" onMouseReleased="#toolBarMouseReleased" onKeyReleased="#keyboardReleased" />
                         <TextField fx:id="descriptionField" GridPane.columnIndex="1" GridPane.rowIndex="1" onMouseReleased="#toolBarMouseReleased" onKeyReleased="#keyboardReleased" />
 <!--                         <TextField fx:id="segmentOrNaturalClassField" GridPane.columnIndex="1" GridPane.rowIndex="2" /> -->
