--- a/src/sil/org/syllableparser/view/fxml/RootLayout.fxml
+++ b/src/sil/org/syllableparser/view/fxml/RootLayout.fxml
@@ -68,6 +68,7 @@
                 <MenuItem mnemonicParsing="true" onAction="#handleConvertPredictedToCorrectSyllabification" text="%menu.convertpredictedtocorrect" fx:id="menuItemConvertPredictedToCorrectSyllabification" />
                 <MenuItem mnemonicParsing="true" onAction="#handleFindWord" text="%menu.findword" fx:id="menuItemFindWord" accelerator="ctrl+f" />
                 <MenuItem mnemonicParsing="true" onAction="#handleClearWords" text="%menu.clearwords" fx:id="menuItemClearWords" />
+                <MenuItem mnemonicParsing="true" onAction="#handleCompareImplementations" text="%menu.compareimplementations" fx:id="menuItemCompareImplementations" />
               </items>
             </Menu>
             <Menu mnemonicParsing="true" text="%menu.view">
