--- a/src/sil/org/syllableparser/view/fxml/CVComparison.fxml
+++ b/src/sil/org/syllableparser/view/fxml/CVComparison.fxml
@@ -8,33 +8,33 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="533.0" prefWidth="637.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sil.org.syllableparser.view.CVComparisonController">
-   <children>
-      <VBox layoutX="120.0" layoutY="62.0" prefHeight="44.0" prefWidth="252.0">
-         <children>
-            <RadioButton mnemonicParsing="false" onAction="#handleCurrentImplementation" selected="true" text="%radio.current">
+	<children>
+		<VBox layoutX="120.0" layoutY="62.0" prefHeight="44.0" prefWidth="252.0">
+			<children>
+					<RadioButton fx:id="currentImplementation" mnemonicParsing="false" onAction="#handleCurrentImplementation" selected="true" text="%radio.current">
                <toggleGroup>
                   <ToggleGroup fx:id="group" />
                </toggleGroup></RadioButton>
-            <RadioButton mnemonicParsing="false" onAction="#handleChosenImplementation" text="%radio.choosebackup" toggleGroup="$group">
-               <padding>
-                  <Insets top="5.0" />
-               </padding>
-            </RadioButton>
-         </children>
-      </VBox>
-      <WebView layoutX="1.0" layoutY="186.0" prefHeight="326.0" prefWidth="637.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-      <Button layoutX="569.0" layoutY="32.0" mnemonicParsing="false" onAction="#handleBrowse1" text="%label.browse" AnchorPane.rightAnchor="13.0" />
-      <TextField fx:id="directory1Field" layoutX="22.0" layoutY="31.0" prefHeight="25.0" prefWidth="528.0" />
-      <TextField fx:id="directory2Field" layoutX="22.0" layoutY="127.0" prefHeight="25.0" prefWidth="528.0" />
-      <Button layoutX="569.0" layoutY="127.0" mnemonicParsing="false" onAction="#handleBrowse2" text="%label.browse" AnchorPane.rightAnchor="13.0" />
-      <Label layoutX="22.0" layoutY="13.0" text="%label.firstimplementation" />
-      <Label layoutX="22.0" layoutY="110.0" text="%label.secondimplementation" />
-      <ButtonBar layoutX="352.0" layoutY="488.0" prefHeight="40.0" prefWidth="272.0">
-         <buttons>
-            <Button defaultButton="true" mnemonicParsing="false" onAction="#handleCompare" fx:id="compareButton" text="%label.compare" />
-            <Button cancelButton="true" mnemonicParsing="false" onAction="#handleCancel" text="%label.cancel" />
-            <Button mnemonicParsing="false" onAction="#handleHelp" text="%label.help" />
-         </buttons>
-      </ButtonBar>
-   </children>
+					<RadioButton fx:id="chosenImplementation" mnemonicParsing="false" onAction="#handleChosenImplementation" text="%radio.choosebackup" toggleGroup="$group">
+						<padding>
+							<Insets top="5.0" />
+						</padding>
+					</RadioButton>
+			</children>
+		</VBox>
+		<WebView layoutX="1.0" layoutY="186.0" prefHeight="326.0" prefWidth="637.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+		<Button fx:id="firstButton" layoutX="569.0" layoutY="32.0" mnemonicParsing="false" onAction="#handleBrowse1" text="%label.browse" AnchorPane.rightAnchor="13.0" />
+		<TextField fx:id="directory1Field" layoutX="22.0" layoutY="31.0" prefHeight="25.0" prefWidth="528.0" />
+		<TextField fx:id="directory2Field" layoutX="22.0" layoutY="127.0" prefHeight="25.0" prefWidth="528.0" />
+		<Button layoutX="569.0" layoutY="127.0" mnemonicParsing="false" onAction="#handleBrowse2" text="%label.browse" AnchorPane.rightAnchor="13.0" />
+		<Label layoutX="22.0" layoutY="13.0" text="%label.firstimplementation" />
+		<Label layoutX="22.0" layoutY="110.0" text="%label.secondimplementation" />
+		<ButtonBar layoutX="352.0" layoutY="488.0" prefHeight="40.0" prefWidth="272.0">
+			<buttons>
+				<Button fx:id="compareButton" defaultButton="true" mnemonicParsing="false" onAction="#handleCompare" text="%label.compare" />
+				<Button cancelButton="true" mnemonicParsing="false" onAction="#handleCancel" text="%label.cancel" />
+				<Button mnemonicParsing="false" onAction="#handleHelp" text="%label.help" />
+			</buttons>
+		</ButtonBar>
+	</children>
 </AnchorPane>
