--- a/src/sil/org/syllableparser/view/fxml/CVComparison.fxml
+++ b/src/sil/org/syllableparser/view/fxml/CVComparison.fxml
@@ -22,14 +22,14 @@
 					</RadioButton>
 			</children>
 		</VBox>
-		<WebView layoutX="1.0" layoutY="186.0" prefHeight="326.0" prefWidth="637.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+		<WebView fx:id="browser" layoutX="1.0" layoutY="186.0" prefHeight="326.0" prefWidth="637.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="162.0" />
 		<Button fx:id="firstButton" layoutX="569.0" layoutY="32.0" mnemonicParsing="false" onAction="#handleBrowse1" text="%label.browse" AnchorPane.rightAnchor="13.0" />
-		<TextField fx:id="directory1Field" layoutX="22.0" layoutY="31.0" prefHeight="25.0" prefWidth="528.0" />
-		<TextField fx:id="directory2Field" layoutX="22.0" layoutY="127.0" prefHeight="25.0" prefWidth="528.0" />
+		<TextField fx:id="directory1Field" layoutX="22.0" layoutY="31.0" prefHeight="25.0" prefWidth="528.0" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="87.0" />
+		<TextField fx:id="directory2Field" layoutX="22.0" layoutY="127.0" prefHeight="25.0" prefWidth="528.0" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="87.0" />
 		<Button layoutX="569.0" layoutY="127.0" mnemonicParsing="false" onAction="#handleBrowse2" text="%label.browse" AnchorPane.rightAnchor="13.0" />
 		<Label layoutX="22.0" layoutY="13.0" text="%label.firstimplementation" />
 		<Label layoutX="22.0" layoutY="110.0" text="%label.secondimplementation" />
-		<ButtonBar layoutX="352.0" layoutY="488.0" prefHeight="40.0" prefWidth="272.0">
+		<ButtonBar layoutX="352.0" layoutY="488.0" prefHeight="40.0" prefWidth="272.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="13.0">
 			<buttons>
 				<Button fx:id="compareButton" defaultButton="true" mnemonicParsing="false" onAction="#handleCompare" text="%label.compare" />
 				<Button cancelButton="true" mnemonicParsing="false" onAction="#handleCancel" text="%label.cancel" />
