--- a/src/sil/org/syllableparser/view/fxml/CVComparison.fxml
+++ b/src/sil/org/syllableparser/view/fxml/CVComparison.fxml
@@ -9,26 +9,25 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="533.0" prefWidth="637.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sil.org.syllableparser.view.CVComparisonController">
 	<children>
-		<VBox layoutX="120.0" layoutY="62.0" prefHeight="44.0" prefWidth="252.0">
+		<HBox layoutX="78.0" layoutY="62.0" prefHeight="22.0" prefWidth="471.0">
 			<children>
 					<RadioButton fx:id="currentImplementation" mnemonicParsing="false" onAction="#handleCurrentImplementation" selected="true" text="%radio.current">
                <toggleGroup>
                   <ToggleGroup fx:id="group" />
                </toggleGroup></RadioButton>
 					<RadioButton fx:id="chosenImplementation" mnemonicParsing="false" onAction="#handleChosenImplementation" text="%radio.choosebackup" toggleGroup="$group">
-						<padding>
-							<Insets top="5.0" />
-						</padding>
-					</RadioButton>
+               <padding>
+                  <Insets left="10.0" />
+               </padding></RadioButton>
 			</children>
-		</VBox>
+		</HBox>
 		<WebView fx:id="browser" layoutX="1.0" layoutY="186.0" prefHeight="326.0" prefWidth="637.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="162.0" />
 		<Button fx:id="firstButton" layoutX="569.0" layoutY="32.0" mnemonicParsing="false" onAction="#handleBrowse1" text="%label.browse" AnchorPane.rightAnchor="13.0" />
 		<TextField fx:id="directory1Field" layoutX="22.0" layoutY="31.0" prefHeight="25.0" prefWidth="528.0" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="87.0" />
-		<TextField fx:id="directory2Field" layoutX="22.0" layoutY="127.0" prefHeight="25.0" prefWidth="528.0" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="87.0" />
-		<Button layoutX="569.0" layoutY="127.0" mnemonicParsing="false" onAction="#handleBrowse2" text="%label.browse" AnchorPane.rightAnchor="13.0" />
+		<TextField fx:id="directory2Field" layoutX="22.0" layoutY="102.0" prefHeight="25.0" prefWidth="528.0" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="87.0" />
+		<Button layoutX="569.0" layoutY="101.0" mnemonicParsing="false" onAction="#handleBrowse2" text="%label.browse" AnchorPane.rightAnchor="13.0" />
 		<Label layoutX="22.0" layoutY="13.0" text="%label.firstimplementation" />
-		<Label layoutX="22.0" layoutY="110.0" text="%label.secondimplementation" />
+		<Label layoutX="22.0" layoutY="84.0" text="%label.secondimplementation" />
 		<ButtonBar layoutX="352.0" layoutY="488.0" prefHeight="40.0" prefWidth="272.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="13.0">
 			<buttons>
 				<Button fx:id="compareButton" defaultButton="true" mnemonicParsing="false" onAction="#handleCompare" text="%label.compare" />
