--- a/src/sil/org/syllableparser/view/fxml/RootLayout.fxml
+++ b/src/sil/org/syllableparser/view/fxml/RootLayout.fxml
@@ -65,6 +65,24 @@
                 <MenuItem mnemonicParsing="true" onAction="#handleAnalysisFont" text="%menu.analysisfont" fx:id="menuItemAnalysisFont" />
               </items>
             </Menu>
+            <Menu mnemonicParsing="true" text="%menu.view">
+              <items>
+              	<Menu mnemonicParsing="true" onAction="#handleCVApproach" text="%approach.cv" >
+                    	<MenuItem mnemonicParsing="true" onAction="#handleCVSegmentInventory" text="%cv.view.segmentinventory" />
+                    	<MenuItem mnemonicParsing="true" onAction="#handleCVNaturalClasses" text="%cv.view.naturalclass" />
+                    	<MenuItem mnemonicParsing="true" onAction="#handleCVSyllablePatterns" text="%cv.view.syllablepatterns" />
+                    	<MenuItem mnemonicParsing="true" onAction="#handleCVWords" text="%cv.view.words" />
+                    	<MenuItem mnemonicParsing="true" onAction="#handleCVWordsPredictedVsCorrect" text="%cv.view.wordspredictedvscorrect" />
+                </Menu>
+              	<MenuItem mnemonicParsing="true" onAction="#handleSonorityHierarchyApproach" text="%approach.sonorityhierarchy" fx:id="menuItemSonorityHierarchyApproach" />
+              	<MenuItem mnemonicParsing="true" onAction="#handleONCApproach" text="%approach.onc" fx:id="menuItemONCApproach" />
+              	<MenuItem mnemonicParsing="true" onAction="#handleMoraicApproach" text="%approach.moraic" fx:id="menuItemMoraicApproach" />
+              	<MenuItem mnemonicParsing="true" onAction="#handleNuclearProjectionApproach" text="%approach.nuclearprojection" fx:id="menuItemNuclearProjectionApproach" />
+              	<MenuItem mnemonicParsing="true" onAction="#handleOTApproach" text="%approach.ot" fx:id="menuItemOTApproach" />
+              	<SeparatorMenuItem />
+                <MenuItem mnemonicParsing="true" onAction="#handleChangeInterfaceLanguage" text="%menu.changeinterfacelanguage" />
+              </items>
+            </Menu>
             <Menu mnemonicParsing="true" text="%menu.tools">
               <items>
                 <MenuItem mnemonicParsing="true" onAction="#handleSyllabifyWords" text="%menu.syllabifywords" fx:id="menuItemSyllabify" accelerator="ctrl+w" />
@@ -74,13 +92,9 @@
                 <MenuItem mnemonicParsing="true" onAction="#handleCompareImplementations" text="%menu.compareimplementations" fx:id="menuItemCompareImplementations" />
               </items>
             </Menu>
-            <Menu mnemonicParsing="true" text="%menu.view">
-              <items>
-                <MenuItem mnemonicParsing="true" onAction="#handleChangeInterfaceLanguage" text="%menu.changeinterfacelanguage" />
-              </items>
-            </Menu>
             <Menu mnemonicParsing="true" text="%menu.help">
                <items>
+                  <MenuItem mnemonicParsing="true" onAction="#handleUserDocumentation" text="%menu.userdocumentation" />
                   <MenuItem mnemonicParsing="true" onAction="#handleHelpIntro" text="%menu.helpintro" />
                   <MenuItem mnemonicParsing="true" onAction="#handleAbout" text="%menu.about" />
                </items>
