--- a/src/sil/org/syllableparser/view/fxml/HyphenationParametersChooser.fxml
+++ b/src/sil/org/syllableparser/view/fxml/HyphenationParametersChooser.fxml
@@ -7,31 +7,31 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="320.0" prefWidth="509.0" stylesheets="@SyllableParser.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sil.org.syllableparser.view.HyphenationParametersController">
+<AnchorPane prefHeight="220.0" prefWidth="509.0" stylesheets="@SyllableParser.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sil.org.syllableparser.view.HyphenationParametersController">
    <children>
-      <ButtonBar layoutX="216.0" layoutY="266.0" prefHeight="40.0" prefWidth="272.0">
+      <ButtonBar layoutX="216.0" layoutY="190.0" prefHeight="40.0" prefWidth="272.0">
         <buttons>
           <Button defaultButton="true" mnemonicParsing="false" onAction="#handleOk" text="%label.ok" />
             <Button cancelButton="true" mnemonicParsing="false" onAction="#handleCancel" text="%label.cancel" />
             <Button mnemonicParsing="false" onAction="#handleHelp" text="%label.help" />
         </buttons>
       </ButtonBar>
-      <Label fx:id="hyphenationParametersFor" layoutX="11.0" layoutY="14.0" text="%label.hyphenationparameters" />
-      <GridPane layoutX="14.0" layoutY="51.0" prefHeight="186.0" prefWidth="482.0">
+      <Label fx:id="hyphenationParametersFor" layoutX="11.0" layoutY="14.0" text="%label.hyphenationparameters" wrapText="true" />
+      <GridPane layoutX="14.0" layoutY="51.0" prefHeight="120.0" prefWidth="482.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="411.0" minWidth="10.0" prefWidth="366.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="181.0" minWidth="10.0" prefWidth="116.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="93.0" minHeight="10.0" prefHeight="66.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="128.0" minHeight="10.0" prefHeight="73.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="148.0" minHeight="10.0" prefHeight="65.0" vgrow="SOMETIMES" />
+          <RowConstraints vgrow="SOMETIMES" /> <!-- maxHeight="93.0" minHeight="10.0" prefHeight="66.0"  -->
+          <RowConstraints vgrow="SOMETIMES" /> <!-- maxHeight="128.0" minHeight="10.0" prefHeight="73.0"  -->
+          <RowConstraints vgrow="SOMETIMES" /> <!-- maxHeight="148.0" minHeight="10.0" prefHeight="65.0"  -->
         </rowConstraints>
          <children>
             <Label text="%label.discretionaryhyphen" wrapText="true" />
             <Label text="%label.hyphenationstartsafter" wrapText="true" GridPane.rowIndex="1" />
             <Label text="%label.hyphenationstopsbefore" wrapText="true" GridPane.rowIndex="2" />
-            <TextField fx:id="discretionaryHyphen" prefHeight="39.0" prefWidth="49.0" GridPane.columnIndex="1">
+            <TextField fx:id="discretionaryHyphen" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" right="30.0" />
                </GridPane.margin></TextField>
