--- a/src/sil/org/syllableparser/view/fxml/CVPredictedToCorrectSyllabificationChooser.fxml
+++ b/src/sil/org/syllableparser/view/fxml/CVPredictedToCorrectSyllabificationChooser.fxml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!-- Copyright (c) 2016 SIL International 
     This software is licensed under the LGPL, version 2.1 or later 
     (http://www.gnu.org/licenses/lgpl-2.1.html) -->
-    
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="400.0" stylesheets="@SyllableParser.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sil.org.syllableparser.view.CVPredictedToCorrectSyllabificationChooserController">
+<AnchorPane prefHeight="400.0" prefWidth="400.0" stylesheets="@SyllableParser.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sil.org.syllableparser.view.CVPredictedToCorrectSyllabificationChooserController">
    <children>
-      <ButtonBar layoutX="114.0" layoutY="355.0" prefHeight="40.0" prefWidth="272.0">
+      <ButtonBar layoutX="114.0" layoutY="355.0" prefHeight="40.0" prefWidth="272.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="14.0">
         <buttons>
           <Button defaultButton="true" mnemonicParsing="false" onAction="#handleOk" text="%label.ok" />
             <Button cancelButton="true" mnemonicParsing="false" onAction="#handleCancel" text="%label.cancel" />
@@ -19,7 +22,7 @@
         </buttons>
       </ButtonBar>
       <Label layoutX="11.0" layoutY="14.0" text="%label.choosepredicted" />
-      <TableView fx:id="cvPredictedSyllabificationTable" layoutX="11.0" layoutY="39.0" prefHeight="316.0" prefWidth="374.0">
+      <TableView fx:id="cvPredictedSyllabificationTable" layoutX="11.0" layoutY="39.0" prefHeight="316.0" prefWidth="374.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="39.0">
         <columns>
             <TableColumn fx:id="checkBoxColumn" prefWidth="30.0">
                <graphic>
