--- a/src/sil/org/syllableparser/view/fxml/RootLayout.fxml
+++ b/src/sil/org/syllableparser/view/fxml/RootLayout.fxml
@@ -100,6 +100,10 @@
 									text="%cv.view.words" />
 								<MenuItem mnemonicParsing="true"
 									onAction="#handleCVWordsPredictedVsCorrect" text="%cv.view.wordspredictedvscorrect" />
+								<MenuItem mnemonicParsing="true" onAction="#handleGraphemeNaturalClasses"
+									text="%cv.view.graphemenaturalclasses" />
+								<MenuItem mnemonicParsing="true" onAction="#handleEnvironments"
+									text="%cv.view.environments" />
 							</Menu>
 							<MenuItem mnemonicParsing="true"
 								onAction="#handleSonorityHierarchyApproach" text="%approach.sonorityhierarchy"
