--- a/src/sil/org/syllableparser/view/fxml/GraphemeNaturalClasses.fxml
+++ b/src/sil/org/syllableparser/view/fxml/GraphemeNaturalClasses.fxml
@@ -45,7 +45,7 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="598.0" prefWidth="383.0">
                <children>
-                  <Label layoutX="1.0" layoutY="7.0" text="%label.naturalclasses" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                  <Label layoutX="1.0" layoutY="7.0" text="%label.graphemenaturalclass" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
                   <GridPane layoutX="5.0" layoutY="35.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="35.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="167.0" minWidth="10.0" prefWidth="70.0" />
