--- a/src/org/sil/syllableparser/view/fxml/SHSonorityHierarchy.fxml
+++ b/src/org/sil/syllableparser/view/fxml/SHSonorityHierarchy.fxml
@@ -41,7 +41,7 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="598.0" prefWidth="383.0">
                <children>
-                  <Label layoutX="1.0" layoutY="7.0" text="%label.syllablepatterns" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                  <Label layoutX="1.0" layoutY="7.0" text="%label.sonorityhierarchy" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
                   <GridPane layoutX="5.0" layoutY="35.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="35.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="167.0" minWidth="10.0" prefWidth="70.0" />
